<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMainCordinateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_light"
        tools:context=".view.MainActivity">


        <LinearLayout
            android:id="@+id/llTotalBalanceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/totalbalance_resourcefile"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3000"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDashboardCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llTotalBalanceLayout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBudget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_600"
                        android:textColor="@color/green"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvExpenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_600"
                        android:textColor="@color/red"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/cvDashboardCard"
            android:layout_marginTop="20dp"
            android:background="@color/secondary_color" />

        <TextView
            android:id="@+id/tvRecyclerViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvDashboardCard"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/transaction"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllTransaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvRecyclerViewTitle"
            android:layout_marginTop="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/secondary_color"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_add_btn" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
